--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>WebEaze — Affordable Web Design & Unlimited Maintenance</title>
-<meta name="description" content="WebEaze builds fast, conversion-ready websites and stays to maintain them. Simple plans, quick launches, real human help for local trades, tutoring agencies, and student portfolios." />
+<title>WebEaze | Affordable Web Design in Maryland, Delaware, PA & NJ</title>
+<meta name="description" content="WebEaze builds and maintains websites for small businesses across Maryland, Delaware, Pennsylvania, and New Jersey. Get a fast, SEO-ready site with unlimited support." />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
