--- a/portal.html
+++ b/portal.html
@@ -132,7 +132,7 @@
     <div class="text-center">
       <div class="eyebrow">Client Portal</div>
       <h1 class="headline mt-2">Support and updates in one place</h1>
-      <p class="sub mt-2">Sign in with your WebEaze email. Submit requests, book a call, and find your resources.</p>
+      <p style="align-items: center !important; ">Sign in with your WebEaze email. Submit requests, book a call, and find your resources.</p>
       <div id="hoursChip" class="btn-ghost mt-2" aria-live="polite"><span id="hoursText">Checking availability...</span></div>
     </div>
   </div>
