sector-based pages

--- a/refund-policy.html
+++ b/refund-policy.html
@@ -134,7 +134,9 @@
     <div class="paper">
       <div class="eyebrow">Policy</div>
       <h1 class="headline">Refund Policy</h1>
-      <p class="lead mb-0">All sales are final because work begins as soon as you subscribe. If something is wrong, we fix it fast. If billing is off, we correct it.</p>
+      <p class="lead mb-0">All sales are final because work begins as soon as you subscribe. If something is wrong, we'll work with you to fix it. 
+        If you have a billing issue or need to cancel, we make it easy. See the details below.
+      </p>
     </div>
   </div>
 </header>
@@ -184,10 +186,10 @@
       </div>
 
       <h2 id="billing">Billing errors</h2>
-      <p>If you see an accidental or duplicate charge, email support@webeaze.io with the charge date, amount, and last four digits of the card. After verification we issue a reversal or account credit.</p>
+      <p>If you see an accidental or duplicate charge, <a href="contact-us.html">contact us</a> with the charge date, amount, and last four digits of the card. After verification we issue a reversal or account credit.</p>
 
       <h2 id="cancellation">Cancellation</h2>
-      <p>You can cancel any time in the Client Portal. Your subscription stops at cancellation and there are no more charges. There are no refunds for unused time.</p>
+      <p>You can cancel any time through your <a href="https://billing.stripe.com/p/login/7sI3gfaO14CEdlm144">Stripe Portal</a>. Your subscription stops at cancellation and billing stops. There are no refunds for unused time.</p>
 
       <h2 id="chargebacks">Chargebacks</h2>
       <p>Filing a chargeback after services are delivered is misuse of the payment process. We provide project approvals, timelines, and deliverables as evidence. Proven misuse can lead to recovery of costs and suspension of service. We always prefer a direct, fair resolution first.</p>
