--- a/site-map.html
+++ b/site-map.html
@@ -122,7 +122,7 @@
 </head>
 <body>
 
-<!-- ===== NAV (identical to homepage) ===== -->
+<!-- ===== NAV ===== -->
 <div class="nav-wrap">
   <div class="promo-bar" id="promoBar" role="region" aria-label="Promotion">
     <div class="container container-narrow promo-inner">
@@ -191,6 +191,13 @@
           <li><a href="consultation.html"><span>Free Consultation</span><span class="arrow">↗</span></a></li>
           <li><a href="seo.html"><span>SEO Services</span><span class="arrow">↗</span></a></li>
           <li><a href="referral.html"><span>Referral Program</span><span class="arrow">↗</span></a></li>
+          <li><a href="web-design-maryland.html"><span>
+            Web Design for Maryland
+          </span><span class="arrow">↗</span></a></li>
+          <li><a href="web-design-delaware.html"><span>Web Design for Delaware</span><span class="arrow">↗</span></a></li>
+          <li><a href="web-design-new-jersey.html" aria-current="page"><span>Web Design for New Jersey</span><span class="arrow">↗</span></a></li>
+          <li><a href="web-design-pennslyvania.html" target="_blank" rel="noopener"><span>Web Design for Pennsylvania
+          </span><span class="arrow">↗</span></a></li>
         </ul>
       </section>
 
