--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
 <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png" />
+<link rel="canonical" href="https://www.webeaze.io/" />
 
 <style>
   :root{
@@ -838,11 +839,16 @@ html,body{ overflow-x:hidden; }
   <div class="container container-narrow">
     <div class="area-content reveal">
       <span class="kicker">WHERE WE WORK </span>
-      <h2 class="area-head" style="word-wrap: break-word">Maryland • Delaware • New Jersey • Pennsylvania</h2>
-      <p class="sub mb-3">Mid-Atlantic focus. Remote anywhere in the United States.</p>
-      <!-- <div class="btn-row">
-        <a href="work-with.html" class="btn-brand">Who We Serve →</a>
-      </div> -->
+      <h2 class="area-head" style="word-wrap: break-word"><a href="/web-design-maryland.html">Maryland</a>,
+        <a href="/web-design-delaware.html">Delaware</a>,
+        <a href="/web-design-pennsylvania.html">Pennsylvania</a>,
+        and <a href="/web-design-new-jersey.html">New Jersey</a>.</h2>
+      <p class="sub mb-3">
+   
+        If we're ever in your area, we'll buy you coffee and chat about your website needs.
+        
+      </p>
+
     </div>
   </div>
 </section>
@@ -932,8 +938,18 @@ html,body{ overflow-x:hidden; }
   </div>
 </section>
 
-<!-- FOOTER (unchanged) -->
+<!-- FOOTER -->
 <footer class="py-4 text-center" style="background:#7851a9;color:#fff">
+  <div class="mt-3 small" style="opacity:.9">
+    <strong>Serving small businesses across:</strong><br>
+    <a href="/web-design-maryland.html" style="color:#fff;text-decoration:underline;">Maryland</a> ·
+    <a href="/web-design-delaware.html" style="color:#fff;text-decoration:underline;">Delaware</a> ·
+    <a href="/web-design-pennsylvania.html" style="color:#fff;text-decoration:underline;">Pennsylvania</a> ·
+    <a href="/web-design-new-jersey.html" style="color:#fff;text-decoration:underline;">New Jersey</a>
+    <br>
+    <br>
+  </div>
+  
   <div class="container container-narrow">
     <div class="mb-1">&copy; <span id="yr"></span> WebEaze. All rights reserved.</div>
     <div class="mb-2 small">
@@ -952,7 +968,7 @@ html,body{ overflow-x:hidden; }
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <script>
-  // Word swap (CSS-class toggle, no layout thrash)
+  // Word swap 
   (function(){
     var el=document.querySelector('.swap'); if(!el) return;
     var items=[].slice.call(el.children), i=0;
