--- a/maintenance.html
+++ b/maintenance.html
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet"/>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png"/>
+  <link rel="canonical" href="https://www.webeaze.io/maintenance.html" />
+
 
   <style>
     :root{
@@ -416,6 +418,15 @@
 </main>
 
 <footer class="py-4 text-center">
+  <div class="mt-3 small" style="opacity:.9">
+    <strong>Serving small businesses across:</strong><br>
+    <a href="/web-design-maryland.html" style="color:#fff;text-decoration:underline;">Maryland</a> ·
+    <a href="/web-design-delaware.html" style="color:#fff;text-decoration:underline;">Delaware</a> ·
+    <a href="/web-design-pennsylvania.html" style="color:#fff;text-decoration:underline;">Pennsylvania</a> ·
+    <a href="/web-design-new-jersey.html" style="color:#fff;text-decoration:underline;">New Jersey</a>
+    <br>
+    <br>
+  </div>
   <div class="container container-narrow">
     <div class="mb-1">&copy; <span id="yr"></span> WebEaze. All rights reserved.</div>
     <div class="mb-2 small">
