--- a/portal.html
+++ b/portal.html
@@ -20,6 +20,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png" />
+  <link rel="canonical" href="https://www.webeaze.io/portal.html" />
+
 
   <style>
     :root{ --brand:#7851a9; --gold:#ffd700; --ink:#0f1228; --ink-2:#3c4260; --muted:#6b7280; --line:#e7eaf4; --bg:#f7f8fc; --white:#fff }
@@ -247,6 +249,15 @@
 <!-- FOOTER (same as homepage) -->
 <footer class="py-4 text-center" style="background:#7851a9;color:#fff">
   <div class="container container-narrow">
+    <div class="mt-3 small" style="opacity:.9">
+      <strong>Serving small businesses across:</strong><br>
+      <a href="/web-design-maryland.html" style="color:#fff;text-decoration:underline;">Maryland</a> ·
+      <a href="/web-design-delaware.html" style="color:#fff;text-decoration:underline;">Delaware</a> ·
+      <a href="/web-design-pennsylvania.html" style="color:#fff;text-decoration:underline;">Pennsylvania</a> ·
+      <a href="/web-design-new-jersey.html" style="color:#fff;text-decoration:underline;">New Jersey</a>
+      <br>
+      <br>
+    </div>
     <div class="mb-1">&copy; <span id="yr"></span> WebEaze. All rights reserved.</div>
     <div class="mb-2 small">
       <a href="terms.html#privacy" style="color:#fff">Privacy Policy</a> ·
