--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About WebEaze | Mission, Story, and Team</title>
   <meta name="description" content="WebEaze builds elegant, fast websites with ongoing support—no hourly rates. Learn our mission, story, values, and the team behind the pixels." />
-  <link rel="canonical" href="https://www.webeaze.io/about" />
+  <link rel="canonical" href="https://www.webeaze.io/about.html" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
@@ -294,6 +294,15 @@
   </section>
 
   <footer>
+    <div class="mt-3 small" style="opacity:.9">
+      <strong>Serving small businesses across:</strong><br>
+      <a href="/web-design-maryland.html" style="color:#fff;text-decoration:underline;">Maryland</a> ·
+      <a href="/web-design-delaware.html" style="color:#fff;text-decoration:underline;">Delaware</a> ·
+      <a href="/web-design-pennsylvania.html" style="color:#fff;text-decoration:underline;">Pennsylvania</a> ·
+      <a href="/web-design-new-jersey.html" style="color:#fff;text-decoration:underline;">New Jersey</a>
+      <br>
+      <br>
+    </div>
     <p class="small mb-1">© 2025 WebEaze. Created and designed by WebEaze. Published on <a href="https://pages.github.com/">GitHub</a>.</p>
     <p class="small">Follow us: <a href="https://facebook.com/61568824951084" target="_blank" rel="noopener">Facebook</a> · <a href="https://www.linkedin.com/company/webeaze" target="_blank" rel="noopener">LinkedIn</a> · <a href="https://instagram.com/webeaze.io" target="_blank" rel="noopener">Instagram</a></p>
   </footer>
