--- a/anniversary.html
+++ b/anniversary.html
@@ -10,6 +10,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
 <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png"/>
+<link rel="canonical" href="https://www.webeaze.io/anniversary.html" />
+
 <style>
   :root{
     --brand:#7851a9; --gold:#ffd700;
@@ -239,6 +241,15 @@
 
 <!-- FOOTER -->
 <footer class="text-center">
+  <div class="mt-3 small" style="opacity:.9">
+    <strong>Serving small businesses across:</strong><br>
+    <a href="/web-design-maryland.html" style="color:#fff;text-decoration:underline;">Maryland</a> ·
+    <a href="/web-design-delaware.html" style="color:#fff;text-decoration:underline;">Delaware</a> ·
+    <a href="/web-design-pennsylvania.html" style="color:#fff;text-decoration:underline;">Pennsylvania</a> ·
+    <a href="/web-design-new-jersey.html" style="color:#fff;text-decoration:underline;">New Jersey</a>
+    <br>
+    <br>
+  </div>
   <div class="container container-narrow">
     <div>&copy; <span id="yr"></span> WebEaze. All rights reserved.</div>
     <div class="small mt-2"><a href="terms.html#privacy" style="color:#fff">Privacy</a> · <a href="terms.html" style="color:#fff">Terms</a> · <a href="site-map.html" style="color:#fff">Site Map</a></div>
