--- a/consultation.html
+++ b/consultation.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Free Consultation | WebEaze</title>
   <meta name="description" content="Book a friendly consult. We will map your site, set clear goals, and give you a simple launch plan. No hourly billing." />
-  <link rel="canonical" href="https://www.webeaze.io/consultation" />
+  <link rel="canonical" href="https://www.webeaze.io/consultation.html" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
@@ -244,8 +244,17 @@
   </div>
 </section>
 
-<!-- FOOTER (same as homepage) -->
+<!-- FOOTER  -->
 <footer class="py-4 text-center" style="background:#7851a9;color:#fff">
+  <div class="mt-3 small" style="opacity:.9">
+    <strong>Serving small businesses across:</strong><br>
+    <a href="/web-design-maryland.html" style="color:#fff;text-decoration:underline;">Maryland</a> ·
+    <a href="/web-design-delaware.html" style="color:#fff;text-decoration:underline;">Delaware</a> ·
+    <a href="/web-design-pennsylvania.html" style="color:#fff;text-decoration:underline;">Pennsylvania</a> ·
+    <a href="/web-design-new-jersey.html" style="color:#fff;text-decoration:underline;">New Jersey</a>
+    <br>
+    <br>
+  </div>
   <div class="container container-narrow">
     <div class="mb-1">&copy; <span id="yr"></span> WebEaze. All rights reserved.</div>
     <div class="mb-2 small">
