--- a/refund-policy.html
+++ b/refund-policy.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Refund Policy | WebEaze</title>
   <meta name="description" content="All sales are final. See how WebEaze handles service issues, billing errors, cancellations, chargebacks, and your rights." />
-  <link rel="canonical" href="https://www.webeaze.io/refund-policy" />
+  <link rel="canonical" href="https://www.webeaze.io/refund-policy.html" />
   <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -210,6 +210,15 @@
 
 <!-- FOOTER (same style as home) -->
 <footer class="py-4 text-center">
+  <div class="mt-3 small" style="opacity:.9">
+    <strong>Serving small businesses across:</strong><br>
+    <a href="/web-design-maryland.html" style="color:#fff;text-decoration:underline;">Maryland</a> ·
+    <a href="/web-design-delaware.html" style="color:#fff;text-decoration:underline;">Delaware</a> ·
+    <a href="/web-design-pennsylvania.html" style="color:#fff;text-decoration:underline;">Pennsylvania</a> ·
+    <a href="/web-design-new-jersey.html" style="color:#fff;text-decoration:underline;">New Jersey</a>
+    <br>
+    <br>
+  </div>
   <div class="container container-narrow">
     <div class="mb-1">&copy; <span id="yr"></span> WebEaze. All rights reserved.</div>
     <div class="mb-2 small">
