--- a/website-request.html
+++ b/website-request.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
   <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png" />
+  <link rel="canonical" href="https://www.webeaze.io/website-request.html" />
+
 
   <!-- Open Graph -->
   <meta property="og:title" content="Website Request | WebEaze" />
@@ -222,8 +224,17 @@
     </section>
   </main>
 
-  <!-- FOOTER (homepage style) -->
+  <!-- FOOTER -->
   <footer class="py-4 text-center">
+    <div class="mt-3 small" style="opacity:.9">
+      <strong>Serving small businesses across:</strong><br>
+      <a href="/web-design-maryland.html" style="color:#fff;text-decoration:underline;">Maryland</a> ·
+      <a href="/web-design-delaware.html" style="color:#fff;text-decoration:underline;">Delaware</a> ·
+      <a href="/web-design-pennsylvania.html" style="color:#fff;text-decoration:underline;">Pennsylvania</a> ·
+      <a href="/web-design-new-jersey.html" style="color:#fff;text-decoration:underline;">New Jersey</a>
+      <br>
+      <br>
+    </div>
     <div class="container container-narrow">
       <div class="mb-1">© <span id="yr"></span> WebEaze. All rights reserved.</div>
       <div class="mb-2 small">
