--- a/about.html
+++ b/about.html
@@ -219,7 +219,7 @@
           <p class="mb-0">A name that reflects our mission: elegant sites, made easy.</p>
         </div>
         <div class="tl-item">
-          <h6 class="mb-1"><strong>Year 1</strong> — 43+ clients, Help Center, referral program</h6>
+          <h6 class="mb-1"><strong>Oct 2025</strong> — 43+ clients, Help Center, referral program</h6>
           <p class="mb-0">Shift to subscription model, stronger support, and faster turnarounds.</p>
         </div>
       </div>
