--- a/anniversary.html
+++ b/anniversary.html
@@ -128,7 +128,7 @@
         </div>
         <br>
     
-          <a href="https://webeaze.tawk.help/article/referral" class="btn-brand mr-2 mb-2">Refer & Earn $200</a>
+          <a href="referral.html" class="btn-brand mr-2 mb-2">Refer & Earn $200</a>
             <br>
             <br>
             <br>
@@ -190,7 +190,7 @@
         </div>
         <div class="tl-item reveal">
           <div></div><div class="tl-dot"></div>
-          <div class="tl-card hiccup"><div class="small text-muted">Dec 2024</div><h3>Holiday delays</h3><p>Queues piled up, so we added status updates and rush options.</p></div>
+          <div class="tl-card hiccup"><div class="small text-muted">Dec 2024</div><h3>Holiday delays</h3><p>Queues piled up, so we added status updates and rush options. And more ways to get help.</p></div>
         </div>
         <div class="tl-item reveal">
           <div class="tl-dot"></div>
@@ -202,7 +202,7 @@
         </div>
         <div class="tl-item reveal">
           <div class="tl-dot"></div>
-          <div class="tl-card win"><div class="small text-muted">Aug–Sep 2025</div><h3>Performance playbook</h3><p>Standard monthly checks for speed and security.</p></div>
+          <div class="tl-card win"><div class="small text-muted">Aug–Sep 2025</div><h3>Performance playbook</h3><p>Efficiency and convenience for both WebEaze and our clients. Many ways to get personalized support.</p></div>
         </div>
       </div>
     </div>
@@ -226,7 +226,7 @@
           </ol>
         </div>
         <div class="mt-3">
-          <a href="https://webeaze.tawk.help/article/referral" class="btn-brand mr-2 mb-2">Refer Now</a>
+          <a href="referral.html" class="btn-brand mr-2 mb-2">Refer Now</a>
           <br>
           <br>
           <span class="small text-muted d-block">Offer ends <strong>October 31</strong></span>
