--- a/referral.html
+++ b/referral.html
@@ -185,7 +185,7 @@
           <div class="num">1</div>
           <div>
             <h3>Share WebEaze</h3>
-            <p>Use your link. Example: <code>webeaze.io/?ref=firstname-lastname</code>. Or tell them to mention your name.</p>
+            <p>Use your link. Example: <code>webeaze.io/?ref=johndoe</code>. Or tell them to mention your name.</p>
           </div>
         </div>
 
