--- a/samples.html
+++ b/samples.html
@@ -159,7 +159,7 @@
       <article class="sample reveal" itemscope itemtype="https://schema.org/CreativeWork">
         <div class="thumb">
           <span class="badge">Education</span>
-          <img src="images/ibis-prep-home.png" alt="Ibis Prep website screenshot" loading="lazy" itemprop="image" />
+          <img src="images/samples/ibis-prep.png" alt="Ibis Prep website screenshot" loading="lazy" itemprop="image" />
         </div>
         <div class="body">
           <h3 class="title h5" itemprop="name">Ibis Prep</h3>
@@ -175,7 +175,7 @@
       <article class="sample reveal" itemscope itemtype="https://schema.org/CreativeWork">
         <div class="thumb">
           <span class="badge">Fitness</span>
-          <img src="images/galaxy-gymnast-home.png" alt="Galaxy Gymnastics website screenshot" loading="lazy" />
+          <img src="images/showcase/desktop.png" alt="Galaxy Gymnastics website screenshot" loading="lazy" />
         </div>
         <div class="body">
           <h3 class="title h5">Galaxy Gymnastics</h3>
@@ -191,7 +191,7 @@
       <article class="sample reveal" itemscope itemtype="https://schema.org/CreativeWork">
         <div class="thumb">
           <span class="badge">Home Services</span>
-          <img src="images/bear-carpet-care-home.png" alt="Bear Carpet Care website screenshot" loading="lazy" />
+          <img src="images/samples/bear-carpet-care.png" alt="Bear Carpet Care website screenshot" loading="lazy" />
         </div>
         <div class="body">
           <h3 class="title h5">Bear Carpet Care</h3>
@@ -207,7 +207,7 @@
       <article class="sample reveal" itemscope itemtype="https://schema.org/CreativeWork">
         <div class="thumb">
           <span class="badge">Fitness</span>
-          <img src="images/run-delmarva.png" alt="Run Delmarva website screenshot" loading="lazy" />
+          <img src="images/samples/run-delmarva.png" alt="Run Delmarva website screenshot" loading="lazy" />
         </div>
         <div class="body">
           <h3 class="title h5">Run Delmarva</h3>
