--- a/web-design-maryland.html
+++ b/web-design-maryland.html
@@ -191,7 +191,7 @@
 
       <div class="col-lg-4 mt-4 mt-lg-0">
         <figure class="surface reveal">
-          <img src="images/showcase/desktop.png" alt="Clean Maryland business website example" style="width:100%;border-radius:10px">
+          <img src="images/samples/run-delmarva.png" alt="Clean Maryland business website example" style="width:100%;border-radius:10px">
           <figcaption class="small text-muted mt-2">A simple layout that makes it easy to call, book, or get a quote</figcaption>
         </figure>
       </div>
