--- a/contact-us.html
+++ b/contact-us.html
@@ -111,17 +111,17 @@
         <div class="contact-cards">
           <div class="card reveal">
             <h3>Email</h3>
-            <p><a href="mailto:support@webeaze.io">support@webeaze.io</a></p>
+            <p style="color: #2f1e66; font-weight: bold;"><a href="mailto:support@webeaze.io">support@webeaze.io</a></p>
             <p class="small-muted">Send files or questions. We will respond soon.</p>
           </div>
           <div class="card reveal">
             <h3>Help Center</h3>
-            <p><a href="https://webeaze.tawk.help" target="_blank" rel="noopener">webeaze.tawk.help</a></p>
+            <p style="color: #2f1e66; font-weight: bold;"> <a href="https://webeaze.tawk.help" target="_blank" rel="noopener">webeaze.tawk.help</a></p>
             <p class="small-muted">Guides and FAQs at any time.</p>
           </div>
           <div class="card reveal">
             <h3>Current clients</h3>
-            <p><a href="https://webeaze.io/website-request">Submit a request</a></p>
+            <p style="color: #2f1e66; font-weight: bold;"><a href="https://webeaze.io/website-request">Submit a request</a></p>
             <p class="small-muted">Goes straight to our production queue.</p>
           </div>
         </div>
