pricing, plan-guide.html
updates to pricing and plan guide

--- a/pricing.html
+++ b/pricing.html
@@ -307,11 +307,13 @@
   <div class="container container-narrow">
     <div class="surface reveal d-flex flex-column flex-md-row align-items-md-center justify-content-between">
       <div class="mb-2 mb-md-0">
-        <div class="eyebrow" style="color:#6b6f86">Next step</div>
-        <h3 class="h5 mb-1" style="font-weight:800">Book a quick consult and get your plan.</h3>
-        <div class="text-muted">We will map pages, timeline, and the fastest path to launch.</div>
+        <div class="eyebrow" style="color:#6b6f86">Still unsure?</div>
+        <h3 class="h5 mb-1" style="font-weight:800">Check our plan guide. We'll help. </h3>
+        <div class="text-muted">
+          Plan features, target business, and upgrade cues to help you choose with clarity. 
+        </div>
       </div>
-      <div class="btn-row"><a href="consultation.html" class="btn-brand">Book consultation</a></div>
+      <div class="btn-row"><a href="plan-guide.html" class="btn-brand">View Guide</a></div>
     </div>
   </div>
 </section>
