updates to site map, index

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@ html,body{ overflow-x:hidden; }
         </p>
 
         <div class="stat-chips mt-3">
-          <span class="chip">43+ active clients</span>
+          <span class="chip">Unlimited Maintenance</span>
           <span class="chip">Launch in 7-14 days</span>
           <span class="chip">Mobile-responsive designs</span>
           <span class="chip">SEO tools included</span> 
