--- a/site-map.html
+++ b/site-map.html
@@ -198,6 +198,8 @@
           <li><a href="web-design-new-jersey.html" aria-current="page"><span>Web Design for New Jersey</span><span class="arrow">↗</span></a></li>
           <li><a href="web-design-pennslyvania.html" target="_blank" rel="noopener"><span>Web Design for Pennsylvania
           </span><span class="arrow">↗</span></a></li>
+          <li><a href="plan-guide.html" target="_blank" rel="noopener"><span>Which WebEaze Plan Fits You?
+          </span><span class="arrow">↗</span></a></li>
         </ul>
       </section>
 
