Updates and launch of new feature

--- a/plan-success.html
+++ b/plan-success.html
@@ -145,8 +145,8 @@
 
     <div class="cta" style="justify-content:center;margin-top:18px">
       <a class="btn-brand" href="portal.html">Open Your Client Portal</a>
-      <a class="btn-ghost" href="https://webeaze.tawk.help/article/website-completion" target="_blank" rel="noopener">Launch Timeline</a>
-      <a class="btn-ghost" href="https://webeaze.tawk.help/category/domain-support" target="_blank" rel="noopener">Domain Support</a>
+      <a class="btn-ghost" href="https://webeaze.io/help#/when-will-my-website-launch" target="_blank" rel="noopener">Launch Timeline</a>
+      <a class="btn-ghost" href="domains.html" target="_blank" rel="noopener">Connect or Transfer Domain</a>
     </div>
   </header>
 
@@ -159,15 +159,15 @@
         <p class="muted">We move fast, but we’ll keep things simple and transparent.</p>
         <div class="steps">
           <div class="step">
-            <div><span class="num">1</span><strong>Kickoff Review</strong></div>
+            <div><span class="num">1</span><strong>Onboarding and Begin</strong></div>
             <p class="muted" style="margin:8px 0 0">We confirm details from your order and prep your initial structure + theme.</p>
           </div>
           <div class="step">
             <div><span class="num">2</span><strong>Content & Access</strong></div>
-            <p class="muted" style="margin:8px 0 0">Submit a <a href="website-request.html"><u>Website Request</u></a> with any relevant information such as logins, content, and media.</p>
+            <p class="muted" style="margin:8px 0 0; color: white !important;">Submit a <a href="website-request.html" style="color: white !important;"><u>Website Request</u></a> with any relevant information such as logins, content, and media.</p>
           </div>
           <div class="step">
-            <div><span class="num">3</span><strong>First Preview</strong></div>
+            <div><span class="num">3</span><strong>Review and Launch</strong></div>
             <p class="muted" style="margin:8px 0 0">We share a live preview for feedback. Most launches go live within <strong>1–2 weeks</strong>.</p>
           </div>
         </div>
@@ -178,7 +178,7 @@
         <h3>Do this now (takes ~5 minutes)</h3>
         <div class="tiles">
           <div class="tile">
-            <div class="t-title">1) Log in to your Portal</div>
+            <div class="t-title">1) Check your email and view your Client Portal</div>
             <p>Submit content, requests, and track progress in one place.</p>
             <div class="cta" style="margin-top:10px">
               <a class="btn-brand" href="portal.html">Go to Portal</a>
@@ -188,15 +188,15 @@
             <div class="t-title">2) Skim the timeline</div>
             <p>See milestones and how we hit your launch date.</p>
             <div class="cta" style="margin-top:10px">
-              <a class="btn-ghost" href="https://webeaze.tawk.help/article/website-completion" target="_blank" rel="noopener">View Timeline</a>
+              <a class="btn-ghost" href="https://webeaze.io/help#/when-will-my-website-launch" target="_blank" rel="noopener">View Timeline</a>
             </div>
           </div>
           <div class="tile">
-            <div class="t-title">3) Domain next steps</div>
-            <p>New domain or transfer? This guide keeps it painless.</p>
-            <div class="cta" style="margin-top:10px">
-              <a class="btn-ghost" href="domains.html" target="_blank" rel="noopener">Domain Help</a>
-            </div>
+            <div class="t-title">3) Sit tight, we're working!</div>
+            <p>
+              We'll reach out if we need anything else. Most launches go live within <strong>1–2 weeks</strong>.
+            </p>
+    
           </div>
         </div>
       </section>
@@ -216,7 +216,7 @@
         <h3>Need help?</h3>
         <p class="muted">Our team is friendly, fast, and human.</p>
         <div class="cta">
-          <a class="btn-ghost" href="https://webeaze.tawk.help" target="_blank" rel="noopener">Visit the Help Center</a>
+          <a class="btn-ghost" href="help.html" target="_blank" rel="noopener">Getting Started Guide</a>
           <a class="btn-ghost" href="website-request.html">Contact Support</a>
         </div>
       </section>
