--- a/website-request.html
+++ b/website-request.html
@@ -183,7 +183,7 @@
           <h3 class="h6 mb-1"><i class="fas fa-bolt"></i> Instant answers</h3>
           <div class="text-muted mb-2">Popular articles clients use before submitting a ticket.</div>
           <div class="answer-list">
-            <a class="answer-item" href="https://webeaze.tawk.help/article/website-completion" target="_blank" rel="noopener">
+            <a class="answer-item" href="https://webeaze.io/help#/when-will-my-website-launch" target="_blank" rel="noopener">
               <strong>Website launch timeline</strong>
               <p>What to expect between kickoff and go live.</p>
             </a>
@@ -191,7 +191,7 @@
               <strong>Domain: connect or transfer</strong>
               <p>Point your domain or move it to us.</p>
             </a>
-            <a class="answer-item" href="https://webeaze.tawk.help/article/add-ons" target="_blank" rel="noopener">
+            <a class="answer-item" href="https://webeaze.io/fee-schedule" target="_blank" rel="noopener">
               <strong>Add ons and fee schedule</strong>
               <p>New pages, integrations, or advanced features.</p>
             </a>
