--- a/google-business-management.html
+++ b/google-business-management.html
@@ -291,7 +291,7 @@
         </div>
       </div>
       <div class="mt-3">
-        <a href="client-portal.html#addons" class="btn-brand">Activate in Client Portal</a>
+        <a href="website-request.html" class="btn-brand">Submit a Website Request</a>
       </div>
     </div>
   </section>
@@ -335,7 +335,7 @@
           <div class="text-muted">Activate management and we’ll take it from here.</div>
         </div>
         <div class="btn-row">
-          <a href="client-portal.html#addons" class="btn-brand btn-sm-fix">Activate Now</a>
+          <a href="website-request.html" class="btn-brand btn-sm-fix">Activate Now</a>
           <a href="consultation.html" class="btn-ghost btn-sm-fix">Talk to Us</a>
         </div>
       </div>
