--- a/pricing.html
+++ b/pricing.html
@@ -260,7 +260,7 @@
           </tbody>
         </table>
       </div>
-      <div class="btn-row mt-3"><a href="https://webeaze.tawk.help/category/webeaze-plans" target="_blank" class="btn-brand">Need help choosing?</a></div>
+      <div class="btn-row mt-3"><a href="plan-guide.html" target="_blank" class="btn-brand">Need help choosing?</a></div>
     </div>
   </div>
 </section>
