--- a/help.html
+++ b/help.html
@@ -195,7 +195,7 @@
 
   <script>
     // ---- Content Model ----
-    const TODAY = '2025-10-13';
+    const TODAY = '10-13-2025';
     const HELP_DATA = {
       topics: [
         { id: 'before', title: 'Before You Start', articles: [
@@ -234,7 +234,7 @@
             <p>Use the <a href="website-request.html">Website Request</a> form for all changes—this keeps your queue organized and ensures nothing is missed. Growth/Elite clients can also use Zoom or Live Chat for faster back-and-forth.</p>
             <div class="cta-row mt-2">
               <a class="btn-brand" href="website-request.html">Open Request Form</a>
-              <a class="btn-ghost" href="consultation.html">Schedule Zoom</a>
+              <a class="btn-ghost" href="https://calendly.com/webeaze/session-full-setups">Schedule Zoom</a>
             </div>
           ` },
           { slug: 'how-to-send-website-access', title: 'How to Send WebEaze Website Access', updated: TODAY, meta: 'Give us secure access on Wix, Squarespace, WordPress, or your domain registrar.', body: `
@@ -271,7 +271,7 @@
           ` }
         ]},
         { id: 'domains-hosting', title: 'Domains & Hosting', articles: [
-          { slug: 'domain-and-hosting-credit', title: 'Domain & Hosting Credit', updated: '2025-06-09', meta: 'Credits by plan and how we apply them.', body: `
+          { slug: 'domain-and-hosting-credit', title: 'Domain & Hosting Credit', updated: '06-09-2025', meta: 'Credits by plan and how we apply them.', body: `
             <h2>Growth plan</h2>
             <p>We cover up to <strong>$50 USD</strong> toward domain and/or hosting—either as a one-time discount or a direct purchase on your behalf. One credit per subscription; does not renew automatically.</p>
             <h2>Elite plan</h2>
@@ -358,7 +358,7 @@
           { slug: 'manage-your-subscription', title: 'Manage your subscription (Stripe Portal)', updated: TODAY, meta: 'Update payment method, receipts, and plan changes.', body: `
             <p>Use your <strong>Stripe Customer Portal</strong> link from your welcome email to update cards, view invoices, and change plans. Need the link again? <a href="website-request.html">Contact us</a> and we’ll resend it.</p>
           ` },
-          { slug: 'cancel-your-plan', title: 'Cancel your plan', updated: '2025-08-01', meta: 'What happens and how content transfer works.', body: `
+          { slug: 'cancel-your-plan', title: 'Cancel your plan', updated: '08-01-2025', meta: 'What happens and how content transfer works.', body: `
             <p>You can cancel anytime in your Stripe Portal. Cancellation is effective immediately. No refunds or credits for unused time (see Refund Policy).</p>
             <h2>Site content</h2>
             <ul>
@@ -371,7 +371,7 @@
           ` }
         ]},
         { id: 'troubleshooting', title: 'Troubleshooting', articles: [
-          { slug: 'turnarounds-and-common-requests', title: 'Turnarounds & common requests', updated: '2025-06-29', meta: 'Typical completion windows for frequent tasks.', body: `
+          { slug: 'turnarounds-and-common-requests', title: 'Turnarounds & common requests', updated: '06-29-2025', meta: 'Typical completion windows for frequent tasks.', body: `
             <table class="table table-bordered">
               <thead><tr><th>Request Type</th><th>Turnaround</th></tr></thead>
               <tbody>
