--- a/work-with.html
+++ b/work-with.html
@@ -283,7 +283,7 @@
         <p class="mb-2" style="color:#3f4564">Clear copy, quick load times, updates without hassle. Start this week.</p>
         <div>
           <a href="consultation.html" class="btn-brand mr-2 mb-2">Book a call</a>
-          <a href="pricing.html" class="btn-ghost mb-2">Compare plans</a>
+          <a href="plan-guide.html" class="btn-ghost mb-2">Compare plans</a>
         </div>
       </div>
       <figure class="mock-browser reveal">
