--- a/thefive.html
+++ b/thefive.html
@@ -28,7 +28,7 @@
     /* Nav */
     .nav{position:sticky;top:0;z-index:50;background:#fff;border-bottom:1px solid var(--line)}
     .nav .wrap{display:flex;align-items:center;justify-content:space-between;padding:14px 20px}
-    .logo img{height:48px;width:auto}
+    .logo img{height:60px;width:auto}
     .menu{display:flex;gap:18px;align-items:center;flex-wrap:wrap}
     .menu a{font-weight:800;opacity:.85}
     .menu a:hover{opacity:1;color:var(--pink)}
@@ -129,10 +129,10 @@
       <div class="menu">
         <a href="#home">Home</a>
         <a href="#booking">Booking</a>
-        <a href="#features">Facilities</a>
+
         <a href="#schedule">Schedule</a>
         <a href="#pricing">Pricing</a>
-        <a href="#gallery">Gallery</a>
+
         <a href="#faq">FAQ</a>
         <a href="#contact">Contact</a>
         <a class="btn btn-pink" href="#booking">Book Now</a>
@@ -144,7 +144,7 @@
     <div class="container hero-inner">
       <div class="reveal">
         <h1>Book the pitch. <span class="accent">Show up & play.</span></h1>
-        <p class="lead">Mobile-friendly 5-a-side booking. Pick a time, pay online with Powertranz, and get instant confirmation. New turf, night lights, showers—good to go.</p>
+        <p class="lead">Mobile-friendly 5-a-side booking. Pick a time, pay online with Powertranz, and get instant confirmation. New turf, night lights, showers. Good to go.</p>
         <div class="heroCTA">
           <a href="#booking" class="btn btn-pink btn-pulse">Book Field</a>
           <a href="#pricing" class="btn btn-outline">View Pricing</a>
@@ -173,7 +173,7 @@
       <p class="muted">Pro-turf pitch, night lights, showers, lockers and a viewing area for spectators.</p>
       <div class="features" style="margin-top:12px">
         <div class="feature"><span class="tag">Pro Turf</span><h3>5‑a‑side Pitch</h3><p class="muted">Fast surface, crisp lines, and lighting so you can play after work.</p></div>
-        <div class="feature"><span class="tag">Clean</span><h3>Showers & Lockers</h3><p class="muted">Freshen up after the match. Lockers available—bring your lock.</p></div>
+        <div class="feature"><span class="tag">Clean</span><h3>Showers & Lockers</h3><p class="muted">Freshen up after the match. Lockers available, bring your lock.</p></div>
         <div class="feature"><span class="tag">Chill</span><h3>Viewing Area</h3><p class="muted">Benches and a small café fridge. Cold drinks, good vibes.</p></div>
       </div>
     </div>
@@ -217,6 +217,7 @@
             <li>Google Business Profile setup & posts</li>
             <li>Analytics dashboard</li>
           </ul>
+          <br>
           <a class="btn" href="#contact" style="margin-top:12px">Discuss Add‑Ons</a>
         </div>
       </div>
@@ -251,7 +252,7 @@
     <div class="container">
       <h2>FAQ</h2>
       <div class="faqs" style="margin-top:12px">
-        <details class="faq"><summary>Can I cancel?</summary><p>Yes—cancel up to 24 hours before for credit. No‑shows are charged in full.</p></details>
+        <details class="faq"><summary>Can I cancel?</summary><p>Yes. Cancel up to 24 hours before for credit. No‑shows are charged in full.</p></details>
         <details class="faq"><summary>What shoes?</summary><p>Turf or indoor shoes only. No metal studs.</p></details>
         <details class="faq"><summary>Do you host leagues?</summary><p>We’re piloting a weekly 5‑a‑side league. Ask about team slots.</p></details>
         <details class="faq"><summary>Parking?</summary><p>Free on‑site parking after 5pm and on weekends.</p></details>
@@ -275,7 +276,7 @@
     <div class="container" style="display:grid;gap:16px;grid-template-columns:1fr 1fr">
       <div>
         <h2>Hit us up</h2>
-        <p class="muted">Tell us what you need and we’ll spin it up—domain, design, checkout included.</p>
+        <p class="muted">Tell us what you need and we’ll spin it up... domain, design, checkout included.</p>
         <div class="card">
           <div class="grid">
             <div class="row">
