--- a/maintenance.html
+++ b/maintenance.html
@@ -420,10 +420,10 @@
 <footer class="py-4 text-center">
   <div class="mt-3 small" style="opacity:.9">
     <strong>Serving small businesses across:</strong><br>
-    <a href="/web-design-maryland.html" style="color:#fff;text-decoration:underline;">Maryland</a> ·
-    <a href="/web-design-delaware.html" style="color:#fff;text-decoration:underline;">Delaware</a> ·
-    <a href="/web-design-pennsylvania.html" style="color:#fff;text-decoration:underline;">Pennsylvania</a> ·
-    <a href="/web-design-new-jersey.html" style="color:#fff;text-decoration:underline;">New Jersey</a>
+    <a href="/web-design-maryland.html" style="color:black;text-decoration:underline;">Maryland</a> ·
+    <a href="/web-design-delaware.html" style="color: black;text-decoration:underline;">Delaware</a> ·
+    <a href="/web-design-pennsylvania.html" style="color:black;text-decoration:underline;">Pennsylvania</a> ·
+    <a href="/web-design-new-jersey.html" style="color:black;text-decoration:underline;">New Jersey</a>
     <br>
     <br>
   </div>
